--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,15 +1,15 @@
-# fly.toml app configuration file generated for juanapposa3 on 2023-09-12T15:28:35+03:00
+# fly.toml app configuration file generated for late-dust-901 on 2023-09-12T15:54:13+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "juanapposa3"
+app = "late-dust-901"
 primary_region = "ams"
 
 [build]
 
 [env]
-PORT = "3001"
+PORT = "3000"
 
 [http_service]
   internal_port = 3000
