--- a/notes/package.json
+++ b/notes/package.json
@@ -15,5 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.9"
   }
 }
